welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
var compteur = 0
	if (a >= 13 && a <= 19) {
		compteur = compteur + 1
	}
}	